
2012-December-29 Struan Robertson

	* PriorDistribution.cpp, Molecule.h/.cpp: Further refactoring of
	prior distribution, cofragment now located and managed by the molecule 
	manager. This required backward navigation to the molecule manager 
	from a molecule to be added.

	* Addition of pseudoisomerization class.

2012-December-29 Struan Robertson

	* PriorDistribution.cpp: Refactoring.

2012-December-29 Struan Robertson

	* PriorDistribution.cpp: Initial check-in of prior distribution, and 
	associated changes, on behalf of Robin Shannon.

	* Updated ipropyl baseline.

2012-December-20 Chris Morley

	* src/DensityOfStates.h,src/MolecularComponents.cpp,src/MolecularComponents.h,
	src/plugin.h,src/plugins/BeyerSwinehart.cpp,src/plugins/ClassicalRotor.cpp,
	src/plugins/DefinedStatesRotor.cpp,src/plugins/HinderedRotorCM1D.cpp,
	src/plugins/HinderedRotorQM1D.cpp,src/plugins/Morse.cpp,src/plugins/QMRotor.cpp:
	Complete unification of DOS calculators
	
	* src/plugin.h: improve formatting of lists of plugins in error messages.

	* src/System.cpp: reinstate reading of me:numberOfGrains, but optimization
	of number of grains etc. remains to be done.

	There are trivial rounding errors in the i-propyl QA test.
 
2012-December-16 Struan Robertson

	* MolecularComponents.cpp/.h: Changes toward the removal of the division 
	of density of states calculators - all density of states calculator
	instances now located in the same vector.

2012-December-2 Struan Robertson

	* Miscellaneous changes following to fix Linux 64 bit compiler warnings
	and to update Linux 64 baselines.

2012-December-7 Chris Morley

	* src/CollisionOperator.cpp, src/CollisionOperator.h,src/System.cpp: XML
	output for "the average of the grain energy in each isomer" already output to
	ctest. 
	XML output is split a bit unhappily between CollisionOperator and
	System and if we keep adding additional outputs there may need to be a
	rationalisation.